--- a/api/spec/package.json
+++ b/api/spec/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "resolver.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon resolver.js --watch ./src -L"
   },
   "author": "",
   "license": "ISC",
