--- a/api/spec/src/open_api.yaml
+++ b/api/spec/src/open_api.yaml
@@ -11,7 +11,6 @@ info:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
 
-# tags are used for organizing operations
 tags:
 - name: admins
   description: Secured Admin-only calls
@@ -19,70 +18,8 @@ tags:
   description: Operations available to regular developers
 
 paths:
-  /inventory:
-    get:
-      tags:
-      - developers
-      summary: searches inventory
-      operationId: searchInventory
-      description: |
-        By passing in the appropriate options, you can search for
-        available inventory in the system
-      produces:
-      - application/json
-      parameters:
-      - in: query
-        name: searchString
-        description: pass an optional search string for looking up inventory
-        required: false
-        type: string
-      - in: query
-        name: skip
-        description: number of records to skip for pagination
-        type: integer
-        format: int32
-        minimum: 0
-      - in: query
-        name: limit
-        description: maximum number of records to return
-        type: integer
-        format: int32
-        minimum: 0
-        maximum: 50
-      responses:
-        200:
-          description: search results matching criteria
-          schema:
-            type: array
-            items:
-              $ref: 'InventoryItem.yaml'
-        400:
-          description: bad input parameter
-    post:
-      tags:
-      - admins
-      summary: adds an inventory item
-      operationId: addInventory
-      description: Adds an item to the system
-      consumes:
-      - application/json
-      produces:
-      - application/json
-      parameters:
-      - in: body
-        name: inventoryItem
-        description: Inventory item to add
-        schema:
-          $ref: './InventoryItem.yaml'
-      responses:
-        201:
-          description: item created
-        400:
-          description: invalid input, object invalid
-        409:
-          description: an existing item already exists
+  $ref: './paths/paths.yaml'
 
-# Added by API Auto Mocking Plugin
 host: virtserver.swaggerhub.com
 basePath: /Hot-Content/babequeue/1.0.0
 schemes:
