Added user model and path Temporary populated models with dummy data Commented unused or causing errors code

--- a/api/spec/src/open_api.yaml
+++ b/api/spec/src/open_api.yaml
@@ -18,7 +18,10 @@ tags:
   description: Operations available to regular developers
 
 paths:
-  $ref: './paths/paths.yaml'
+  $ref: ./paths/paths.yaml
+
+definitions:
+  $ref: ./definitions/index.yaml
 
 host: virtserver.swaggerhub.com
 basePath: /Hot-Content/babequeue/1.0.0
