--- a/api/spec/package.json
+++ b/api/spec/package.json
@@ -11,5 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "swagger-parser": "^5.0.0"
+  },
+  "dependencies": {
+    "js-yaml": "^3.12.0",
+    "json-refs": "^3.0.4"
   }
 }
