--- a/api/spec/src/definitions/project.yaml
+++ b/api/spec/src/definitions/project.yaml
@@ -1,16 +1,16 @@
 type: object
-required:
-- id
-- name
-- author
-- created_date
-- stage
-- participants
-- tasks
-- resources
-- stack
-- votes
-- is_reported
+#required:
+#- id
+#- name
+#- author
+#- created_date
+#- stage
+#- participants
+#- tasks
+#- resources
+#- stack
+#- votes
+#- is_reported
 properties:
   id:
     type: string
@@ -20,21 +20,21 @@ properties:
     type: string
     example: Awesome Project
   author:
-    $ref: 'user.yaml'
+    $ref: ./user.yaml
   created_date:
     type: string
     format: int32
     example: 2016-08-29T09:12:33.001Z
   stage:
-    $ref: 'stage.yaml'
+    $ref: ./stage.yaml
   participants:
     type: array
     items:
-      $ref: 'user.yaml'
+      $ref: ./user.yaml
   tasks:
     type: array
     items:
-      $ref: 'task.yaml'
+      $ref: ./task.yaml
   resources:
     type: array
     items:
@@ -43,7 +43,7 @@ properties:
   stack:
     type: array
     items:
-      $ref: 'tag.yaml'
+      $ref: ./tag.yaml
 
   is_reported:
     type: boolean
