--- a/api/spec/src/paths/projects/single/get.yaml
+++ b/api/spec/src/paths/projects/single/get.yaml
@@ -8,6 +8,11 @@ description: |
 produces:
 - application/json
 parameters:
+- in: path
+  name: projectId
+  type: string
+  required: true
+  description: Id of project to get
 - in: query
   name: searchString
   description: pass an optional search string for looking up inventory
@@ -30,6 +35,6 @@ responses:
   200:
     description: search results matching criteria
     schema:
-      $ref: '../../../definitions/project.yaml'
+      $ref: 'file:/src/open_api.yaml#/definitions/Project'
   400:
     description: bad input parameter
