--- a/api/spec/src/paths/projects/single/index.yaml
+++ b/api/spec/src/paths/projects/single/index.yaml
@@ -1,8 +1,8 @@
 get:
   $ref: 'get.yaml'
-post:
-  $ref: 'post.yaml'
-put:
-  $ref: 'put.yaml'
-delete:
-  $ref: 'delete.yaml'
+#post:
+#  $ref: 'post.yaml'
+#put:
+#  $ref: 'put.yaml'
+#delete:
+#  $ref: 'delete.yaml'
