--- a/api/spec/src/paths/projects/get.yaml
+++ b/api/spec/src/paths/projects/get.yaml
@@ -1,7 +1,3 @@
-tags:
-- developers
-summary: searches inventory
-operationId: searchInventory
 description: |
   By passing in the appropriate options, you can search for
   available inventory in the system
@@ -9,27 +5,16 @@ produces:
 - application/json
 parameters:
 - in: query
-  name: searchString
-  description: pass an optional search string for looking up inventory
+  name: name
+  description: filter projects by given name
   required: false
   type: string
-- in: query
-  name: skip
-  description: number of records to skip for pagination
-  type: integer
-  format: int32
-  minimum: 0
-- in: query
-  name: limit
-  description: maximum number of records to return
-  type: integer
-  format: int32
-  minimum: 0
-  maximum: 50
 responses:
   200:
     description: search results matching criteria
     schema:
-      $ref: '../../definitions/project.yaml'
+    type: array
+    items:
+      $ref: 'file://src/open_api.yaml#/definitions/project'
   400:
     description: bad input parameter
