--- a/api/spec/src/paths/projects/single/index.yaml
+++ b/api/spec/src/paths/projects/single/index.yaml
@@ -1,8 +1,6 @@
 get:
-  $ref: 'get.yaml'
-post:
-  $ref: 'post.yaml'
+  $ref: "get.yaml"
 put:
-  $ref: 'put.yaml'
+  $ref: "put.yaml"
 delete:
-  $ref: 'delete.yaml'
+  $ref: "delete.yaml"
