--- a/api/spec/src/paths/projects/index.yaml
+++ b/api/spec/src/paths/projects/index.yaml
@@ -1,10 +1,4 @@
 get:
-  $ref: 'get.yaml'
+  $ref: "get.yaml"
 post:
-  $ref: 'post.yaml'
-put:
-  response: 400
-  dsecription: 'Method not allowed'
-delete:
-  response: 400
-  dsecription: 'Method not allowed'
+  $ref: "post.yaml"
