--- a/api/spec/src/paths/projects/post.yaml
+++ b/api/spec/src/paths/projects/post.yaml
@@ -3,12 +3,13 @@ consumes:
 - application/json
 produces:
 - application/json
-- in: "body"
-  name: "body"
-  description: "Project object that needs to be added"
+- in: body
+  name: body
+  descriptions:
+  - Project object that needs to be added
   required: true
-    schema:
-    $ref: "file://src/open_api.yaml#/definitions/project"
+  schema:
+    $ref: file://src/open_api.yaml#/definitions/project
 responses:
   405:
-    description: "Invalid input"
+    description: Invalid object input
