--- a/api/spec/src/paths/users/projectsStarred/post.yaml
+++ b/api/spec/src/paths/users/projectsStarred/post.yaml
@@ -18,4 +18,4 @@ responses:
     schema:
       type: array
       items:
-        $ref: "file:/src/open_api.yaml#/definitions/Project"
+        $ref: "file://src/open_api.yaml#/definitions/Project"
