--- a/api/spec/src/paths/users/projectsStarred/single/get.yaml
+++ b/api/spec/src/paths/users/projectsStarred/single/get.yaml
@@ -17,7 +17,7 @@ responses:
   200:
     description: "OK"
     schema:
-      $ref: "file:/src/open_api.yaml#/definitions/Project"
+      $ref: "file://src/open_api.yaml#/definitions/Project"
   400:
     description: "Invalid ID supplied"
   404:
