--- a/api/spec/src/paths/projects/get.yaml
+++ b/api/spec/src/paths/projects/get.yaml
@@ -13,6 +13,6 @@ responses:
     schema:
       type: array
       items:
-        $ref: file://src/open_api.yaml#/definitions/project
+        $ref: file://src/open_api.yaml#/definitions/Project
   400:
     description: Wrong parameter given
