--- a/api/spec/src/paths/projects/get.yaml
+++ b/api/spec/src/paths/projects/get.yaml
@@ -1,4 +1,4 @@
-description: Search for project by passing parameters in a query
+description: Search for projects by passing parameters in a query
 produces:
 - application/json
 parameters:
@@ -13,6 +13,6 @@ responses:
     schema:
       type: array
       items:
-        $ref: file://src/open_api.yaml#/definitions/Project
+        $ref: file://src/open_api.yaml#/definitions/ProjectDefault
   400:
     description: Wrong parameter given
