--- a/api/spec/src/paths/projects/single/get.yaml
+++ b/api/spec/src/paths/projects/single/get.yaml
@@ -12,6 +12,6 @@ responses:
   200:
     description: search results matching criteria
     schema:
-      $ref: 'file://src/open_api.yaml#/definitions/Project'
+      $ref: 'file://src/open_api.yaml#/definitions/ProjectDefault'
   400:
     description: bad input parameter
