--- a/api/spec/src/paths/users/post.yaml
+++ b/api/spec/src/paths/users/post.yaml
@@ -1,20 +1,20 @@
-summary: "Add a new users"
-operationId: "addUser"
+description: 'Add a new users'
+operationId: addUser
 consumes:
-- "application/json"
+- application/json
 produces:
-- "application/json"
+- application/json
 parameters:
-- in: "body"
-  name: "body"
-  description: "User object that needs to be created"
+- in: body
+  name: body
+  description: 'User object that needs to be created'
   required: true
   schema:
-    $ref: "file://src/open_api.yaml#/definitions/User"
+    $ref: file://src/open_api.yaml#/definitions/UserDefault
 responses:
   405:
-    description: "Invalid input"
+    description: 'Invalid input'
   201:
-    description: "User created"
+    description: 'User created'
     schema:
-      $ref: "file://src/open_api.yaml#/definitions/User"
+      $ref: file://src/open_api.yaml#/definitions/UserDefault
