--- a/api/spec/src/paths/users/projectsStarred/get.yaml
+++ b/api/spec/src/paths/users/projectsStarred/get.yaml
@@ -1,21 +1,21 @@
-summary: "Get all projects starred by the users"
-operationId: "getStarredProjects"
+summary: 'Get all projects starred by the users'
+operationId: getStarredProjects
 produces:
-- "application/json"
+- application/json
 parameters:
-- name: "userId"
-  in: "path"
-  description: "ID of users to get projects from"
+- name: userId
+  in: path
+  description: 'ID of users to get projects from'
   required: true
-  type: "string"
+  type: string
 responses:
   200:
-    description: "OK"
+    description: 'OK'
     schema:
       type: array
       items:
-        $ref: "file://src/open_api.yaml#/definitions/Project"
+        $ref: file://src/open_api.yaml#/definitions/ProjectDefault
   400:
-    description: "Invalid ID supplied"
+    description: 'Invalid ID supplied'
   404:
-    description: "User not found"
+    description: 'User not found'
