--- a/api/spec/src/paths/users/projectsStarred/single/delete.yaml
+++ b/api/spec/src/paths/users/projectsStarred/single/delete.yaml
@@ -1,26 +1,26 @@
-summary: "Remove projects from starred"
-operationId: "deleteStarredProject"
+summary: 'Remove projects from starred'
+operationId: deleteStarredProject
 produces:
-- "application/json"
+- application/json
 parameters:
-- name: "userId"
-  in: "path"
-  description: "ID of users to delete project from"
+- name: userId
+  in: path
+  description: 'ID of users to delete project from'
   required: true
-  type: "string"
-- name: "projectId"
-  in: "path"
-  description: "ID of project to unstar"
+  type: string
+- name: projectId
+  in: path
+  description: 'ID of project to unstar'
   required: true
-  type: "string"
+  type: string
 responses:
   200:
-    description: "OK"
+    description: 'OK'
     schema:
       type: array
       items:
-        $ref: "file://src/open_api.yaml#/definitions/Project"
+        $ref: file://src/open_api.yaml#/definitions/ProjectDefault
   400:
-    description: "Invalid ID supplied"
+    description: 'Invalid ID supplied'
   404:
-    description: "User not found"
+    description: 'User not found'
